// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`errors validates the  input 1`] = `
[
  [
    
"Cannot run command, you made some mistakes:

Invalid argument for parameter: "age". The error was:
Invalid input: expected int, received number

Here are the docs for this command:


PARAMETERS

  \x1B[4m\x1B[90mName\x1B[39m\x1B[24m    \x1B[4m\x1B[90mType\x1B[39m\x1B[24m      \x1B[4m\x1B[90mDefault\x1B[39m\x1B[24m       \x1B[4m\x1B[90mEnvironment (1)\x1B[39m\x1B[24m  
                                                   
  \x1B[1m\x1B[32mage\x1B[39m\x1B[22m     \x1B[34mnumber\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[2m\x1B[90m     \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90mNOTES\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m━━━━━\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m(1) Parameters can be passed arguments via environment variables. Command\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    line arguments take precedence. Environment variable names are snake \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    cased versions of the parameter name (or its aliases), case          \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    insensitive. They must be prefixed with \x1B[34mCLI_PARAMETER_\x1B[90m or \x1B[34mCLI_PARAM_\x1B[90m \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    (case insensitive). Examples:                                        \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mAGE\x1B[90m="..."                                            \x1B[39m\x1B[22m  
"
,
  ],
]
`;

exports[`errors throws error when argument missing (last position) 1`] = `
[
  [
    
"Cannot run command, you made some mistakes:

Missing argument for flag "age".

Here are the docs for this command:


PARAMETERS

  \x1B[4m\x1B[90mName\x1B[39m\x1B[24m    \x1B[4m\x1B[90mType\x1B[39m\x1B[24m      \x1B[4m\x1B[90mDefault\x1B[39m\x1B[24m       \x1B[4m\x1B[90mEnvironment (1)\x1B[39m\x1B[24m  
                                                   
  \x1B[1m\x1B[32mage\x1B[39m\x1B[22m     \x1B[34mnumber\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[2m\x1B[90m     \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90mNOTES\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m━━━━━\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m(1) Parameters can be passed arguments via environment variables. Command\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    line arguments take precedence. Environment variable names are snake \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    cased versions of the parameter name (or its aliases), case          \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    insensitive. They must be prefixed with \x1B[34mCLI_PARAMETER_\x1B[90m or \x1B[34mCLI_PARAM_\x1B[90m \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    (case insensitive). Examples:                                        \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mAGE\x1B[90m="..."                                            \x1B[39m\x1B[22m  
"
,
  ],
]
`;

exports[`errors throws error when argument missing (non-last position) 1`] = `
[
  [
    
"Cannot run command, you made some mistakes:

Missing argument for flag "age".

Here are the docs for this command:


PARAMETERS

  \x1B[4m\x1B[90mName\x1B[39m\x1B[24m    \x1B[4m\x1B[90mType\x1B[39m\x1B[24m      \x1B[4m\x1B[90mDefault\x1B[39m\x1B[24m       \x1B[4m\x1B[90mEnvironment (1)\x1B[39m\x1B[24m  
                                                   
  \x1B[1m\x1B[32mage\x1B[39m\x1B[22m     \x1B[34mnumber\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[1m\x1B[32mname\x1B[39m\x1B[22m    \x1B[34mstring\x1B[39m    \x1B[1m\x1B[30m\x1B[101m REQUIRED \x1B[49m\x1B[39m\x1B[22m    \x1B[34m✓\x1B[39m                
                                                   
  \x1B[2m\x1B[90m     \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90mNOTES\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m━━━━━\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m(1) Parameters can be passed arguments via environment variables. Command\x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    line arguments take precedence. Environment variable names are snake \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    cased versions of the parameter name (or its aliases), case          \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    insensitive. They must be prefixed with \x1B[34mCLI_PARAMETER_\x1B[90m or \x1B[34mCLI_PARAM_\x1B[90m \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    (case insensitive). Examples:                                        \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mAGE\x1B[90m="..."                                            \x1B[39m\x1B[22m  
  \x1B[2m\x1B[90m    → \x1B[34mCLI_PARAMETER_\x1B[90m\x1B[32mNAME\x1B[90m="..."                                           \x1B[39m\x1B[22m  
"
,
  ],
]
`;
